--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
     row-gap: 5px;
     justify-content: start;
     border: solid;
+    width:fit-content;
+    height:fit-content;
 
 }
 
@@ -11,12 +13,16 @@
     background-color: #c6ecc6;
     grid-row-start: 1;
     grid-row-end: 1;
+    padding: 5px;
+    border-bottom: solid 2px;
 }
 
 .calc {
     display: flex;
     flex-wrap: wrap;
     column-gap: 10px;
+    padding: 10px;
+    background-color: #e6ffff;
     
 }
 
