--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@
     grid-row-end: 1;
     padding: 5px;
     border-bottom: solid 2px;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .calc {
