display 0 as default, when 1 is pressed, replace it with 1

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
 
 .digit {
     padding: 10px;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: "LCD",'Xenara','Times New Roman', Times, serif;
     background-color: #d1d1e0;
 }
 
